--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_BUILD_TYPE Debug)
 
 # Add the main executable
-add_executable(Algorithm-Visualizer main.cpp Queue.hpp linkedList.hpp)
+add_executable(Algorithm-Visualizer main.cpp)
 
 # Find the SFML package (installed globally)
 find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
