implemented support for multiple displays. currently only implemented for main menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,28 @@
+# cmake_minimum_required(VERSION 3.10)
+
+# # Project Name
+# project(Algorithm-Visualizer)
+
+# # C++ Standard
+# set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
+# set(CMAKE_BUILD_TYPE Debug)
+
+# # Add the main executable
+# add_executable(Algorithm-Visualizer main.cpp)
+
+# # Find the SFML package (installed globally)
+# find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+
+# # Link SFML libraries to the executable
+# target_link_libraries(Algorithm-Visualizer sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
+
+# # Find X11 package
+# find_package(X11 REQUIRED)
+
+# # Link X11 library
+# target_link_libraries(Algorithm-Visualizer ${X11_LIBRARIES})
+
 cmake_minimum_required(VERSION 3.10)
 
 # Project Name
@@ -20,5 +45,15 @@ target_link_libraries(Algorithm-Visualizer sfml-system sfml-window sfml-graphics
 # Find X11 package
 find_package(X11 REQUIRED)
 
-# Link X11 library
+# Link X11 libraries
 target_link_libraries(Algorithm-Visualizer ${X11_LIBRARIES})
+
+# Find Xinerama (part of X11 extensions)
+find_library(XINERAMA_LIBRARY Xinerama REQUIRED)
+
+# Link Xinerama library
+if(XINERAMA_LIBRARY)
+    target_link_libraries(Algorithm-Visualizer ${XINERAMA_LIBRARY})
+else()
+    message(FATAL_ERROR "Xinerama library not found!")
+endif()
